prevent overflow on minimal view

--- a/src/app/styl/views/movie_detail.styl
+++ b/src/app/styl/views/movie_detail.styl
@@ -251,7 +251,7 @@
 				margin-top: 26px
 				z-index: 3
 				width: auto
-				max-width: 270px
+				max-width: 280px
 				max-height: 72px
 				right: 0
 				overflow-x: hidden
@@ -261,7 +261,7 @@
 				background: rgba(20, 24, 26, 0.6)
 
 			.flag
-				margin: 4px
+				margin: 3px
 				background-size: 22px 16px
 				position: relative
 				float: right
